Fix bug that prevented maps from being dragged on Firefox

--- a/WcaOnRails/app/assets/stylesheets/competitions.scss
+++ b/WcaOnRails/app/assets/stylesheets/competitions.scss
@@ -226,6 +226,10 @@ $venue-map-wrapper-height: 400px;
   &.competitions-map #competitions-admin {
     display: none;
   }
+  
+  #competitions-map {
+    user-select: none;
+  }
 
   #competitions-list {
 
