--- a/WcaOnRails/app/assets/stylesheets/persons.scss
+++ b/WcaOnRails/app/assets/stylesheets/persons.scss
@@ -202,5 +202,6 @@
   #competitions-map {
     width: 100%;
     height: 500px;
+    user-select: none;
   }
 }
